<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/edit_profile_header">

        <EditTextPreference
            app:key="edit_username_key"
            app:title="@string/new_username_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="edit_email_key"
            app:title="@string/new_email_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="edit_password_key"
            app:title="@string/new_password_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/gps_tracker_header">

        <SwitchPreferenceCompat
            app:key="gps_on_off_key"
            app:title="@string/turn_gps_title" />

        <SwitchPreferenceCompat
            app:dependency="gps_on_off_key"
            app:key="tracker"
            app:title="@string/show_my_gps_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/theme_header">

        <SwitchPreferenceCompat
            app:key="theme_key"
            app:title="@string/change_theme_title" />

    </PreferenceCategory>

</PreferenceScreen>