<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_baseline_supervisor_account_24"
            android:title="@string/menu_friends"/>
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_logout_button"
            android:icon="@drawable/baseline_power_settings_new_black_18dp"
            android:title="@string/menu_logout"/>
    </group>
</menu>